virt01/manual/media/droppedneedle/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: droppedneedle-svc
spec:
  selector:
    app: droppedneedle
  ports:
    - name: http
      protocol: TCP
      port: 8688
      targetPort: 8688
